Stabilize local Airflow setup using Docker Compose

--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -4,12 +4,14 @@ x-airflow-common:
   &airflow-common
   image: apache/airflow:2.8.1
   environment:
-    AIRFLOW__CORE__EXECUTOR: LocalExecutor
+    AIRFLOW__CORE__EXECUTOR: SequentialExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+    AIRFLOW__WEBSERVER__SECRET_KEY: "local-dev-secret-key"
+    GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/gcp/application_default_credentials.json
   volumes:
     - ./dags:/opt/airflow/dags
-  user: "${AIRFLOW_UID}:0"
+    - "/mnt/c/Users/Yogesh Patil/AppData/Roaming/gcloud/application_default_credentials.json:/opt/airflow/gcp/application_default_credentials.json:ro"
   depends_on:
     postgres:
       condition: service_healthy
@@ -21,8 +23,6 @@ services:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
       POSTGRES_DB: airflow
-    volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
@@ -32,17 +32,17 @@ services:
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
-    command: >
-      -c "
-      airflow db init &&
-      airflow users create
-        --username airflow
-        --password airflow
-        --firstname Airflow
-        --lastname Admin
-        --role Admin
-        --email admin@example.com
-      "
+    command:
+      - -c
+      - |
+        airflow db init
+        airflow users create \
+          --username airflow \
+          --password airflow \
+          --firstname Airflow \
+          --lastname Admin \
+          --role Admin \
+          --email admin@example.com
     restart: "no"
 
   airflow-webserver:
@@ -54,6 +54,3 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
-
-volumes:
-  postgres-db-volume:
